--- a/Inkscape/Tutorials/man.po
+++ b/Inkscape/Tutorials/man.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Inkscape man\n"
 "POT-Creation-Date: 2024-10-04 17:40+0200\n"
-"PO-Revision-Date: 2025-06-12 10:25+0200\n"
+"PO-Revision-Date: 2025-07-02 07:42+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv\n"
@@ -2379,7 +2379,7 @@ msgid ""
 "    inkview --fullscreen --timer=5 [files/folders ...]\n"
 "\n"
 msgstr ""
-"    inkview --fullscreen --timer=5 [files/folders ...]\n"
+"    inkview --fullscreen --timer=5 [filer/mappar ...]\n"
 "\n"
 
 #. type: textblock
