--- a/Inkscape/Tutorials/tutorial-basic.po
+++ b/Inkscape/Tutorials/tutorial-basic.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Inkscape tutorial basic Swedish\n"
 "POT-Creation-Date: 2024-08-02 00:37+0200\n"
-"PO-Revision-Date: 2025-05-13 12:33+0200\n"
+"PO-Revision-Date: 2025-07-02 07:41+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv\n"
@@ -14,7 +14,7 @@ msgstr ""
 #. Put one translator per line, in the form NAME <EMAIL>, YEAR1, YEAR2
 msgctxt "_"
 msgid "translator-credits"
-msgstr "Daniel Nylander"
+msgstr "Daniel Nylander <po@danielnylander.se>, 2025."
 
 #. (itstool) path: articleinfo/title
 #: tutorial-basic.xml:6
@@ -47,7 +47,7 @@ msgid ""
 "setting fill and stroke, alignment, and stacking order. For more advanced "
 "topics, check out the other tutorials in the <guimenu>Help</guimenu> menu."
 msgstr ""
-"Den grundläggande handledningen omfattar navigering i Canvas, "
+"Den grundläggande handledningen omfattar navigering i duken, "
 "dokumenthantering, grunderna i formverktyget, urvalstekniker, omvandling av "
 "objekt med väljaren, gruppering, inställning av fyllning och streck, "
 "justering och staplingsordning. För mer avancerade ämnen, kolla in de andra "
@@ -71,16 +71,16 @@ msgid ""
 "scrolling vertically; press <keycap function=\"shift\">Shift</keycap> and "
 "move the wheel to scroll horizontally."
 msgstr ""
-"Det finns många sätt att panorera (rulla) dokumentets canvas. Försök "
+"Det finns många sätt att panorera (rulla) dokumentets canvas. Prova "
 "<keycombo><keycap function=\"control\">Ctrl</keycap><keycap>pil</keycap></"
 "keycombo> tangenterna för att bläddra med tangentbordet. (Prova detta nu för "
 "att rulla dokumentet nedåt.) Du kan också dra i dokumentet med den mellersta "
 "musknappen. Eller så kan du använda rullningslisterna (tryck på "
 "<keycombo><keycap function=\"control\">Ctrl</keycap><keycap>B</keycap></"
 "keycombo> för att visa eller dölja dem). <mousebutton role=\"mouse-"
-"wheel\">Hjulet</mousebutton> på musen fungerar också för att skrolla "
+"wheel\">Hjulet</mousebutton> på musen fungerar också för att rulla "
 "vertikalt; tryck på <keycap function=\"shift\">Shift</keycap> och flytta "
-"hjulet för att skrolla horisontellt."
+"hjulet för att rulla horisontellt."
 
 #. (itstool) path: sect1/title
 #: tutorial-basic.xml:36
@@ -347,7 +347,7 @@ msgstr ""
 "<keycombo><keycap function=\"control\">Ctrl</keycap><keycap>Z</keycap></"
 "keycombo>. (Eller, om du ändrar dig igen, kan du <firstterm>göra om</"
 "firstterm> den ångrade åtgärden genom att <keycombo><keycap "
-"function=\"control\">Ctrl</keycap><keycap function=\"shift\">Skifta</"
+"function=\"control\">Ctrl</keycap><keycap function=\"shift\">Skift</"
 "keycap><keycap>Z</keycap></keycombo>.)"
 
 #. (itstool) path: sect1/title
@@ -653,7 +653,7 @@ msgid ""
 "objects on the left are independent; the same three objects on the right are "
 "grouped. Try to drag the group."
 msgstr ""
-"Flera objekt kan kombineras till en <firstterm>grupp.</firstterm> En grupp "
+"Flera objekt kan kombineras till en <firstterm>grupp</firstterm>. En grupp "
 "beter sig som ett enda objekt när du drar eller transformerar den. Nedan är "
 "de tre objekten till vänster oberoende, medan samma tre objekt till höger är "
 "grupperade. Försök att dra i gruppen."
@@ -740,7 +740,7 @@ msgstr ""
 #. (itstool) path: sect1/title
 #: tutorial-basic.xml:383
 msgid "Fill and stroke"
-msgstr "Fyllning, ingen linje"
+msgstr "Fyllning och streck"
 
 #. (itstool) path: sect1/para
 #: tutorial-basic.xml:384
@@ -1193,7 +1193,7 @@ msgstr ""
 #. (itstool) path: sect1/title
 #: tutorial-basic.xml:651
 msgid "Conclusion"
-msgstr "Slutsats"
+msgstr "Sammanfattning"
 
 #. (itstool) path: sect1/para
 #: tutorial-basic.xml:652
