--- a/Inkscape/Tutorials/tutorial-calligraphy.po
+++ b/Inkscape/Tutorials/tutorial-calligraphy.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Inkscape tutorial calligraphy Swedish\n"
 "POT-Creation-Date: 2023-07-14 16:46+0200\n"
-"PO-Revision-Date: 2025-05-13 12:34+0200\n"
+"PO-Revision-Date: 2025-06-30 09:10+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv\n"
@@ -14,7 +14,7 @@ msgstr ""
 #. Put one translator per line, in the form NAME <EMAIL>, YEAR1, YEAR2
 msgctxt "_"
 msgid "translator-credits"
-msgstr "Daniel Nylander"
+msgstr "Daniel Nylander <po@danielnylander.se>, 2025."
 
 #. (itstool) path: articleinfo/title
 #: tutorial-calligraphy.xml:6
@@ -334,7 +334,7 @@ msgstr ""
 #. (itstool) path: sect1/title
 #: tutorial-calligraphy.xml:210
 msgid "Tremor"
-msgstr "Tremor"
+msgstr "Skakning"
 
 #. (itstool) path: sect1/para
 #: tutorial-calligraphy.xml:211
@@ -343,7 +343,7 @@ msgid ""
 "adjustable in the Controls bar with values ranging from 0 to 100. It will affect your strokes producing anything from "
 "slight unevenness to wild blotches and splotches. This significantly expands the creative range of the tool."
 msgstr ""
-"<firstterm>Tremor</firstterm> är avsedd att ge ett mer naturligt utseende till kalligrafins streck. Tremor är "
+"<firstterm>Skakning</firstterm> är avsedd att ge ett mer naturligt utseende till kalligrafins streck. Tremor är "
 "justerbar i kontrollfältet med värden som sträcker sig från 0 till 100. Det kommer att påverka dina streck som "
 "producerar allt från små ojämnheter till vilda fläckar och fläckar. Detta utökar verktygets kreativa räckvidd "
 "avsevärt."
@@ -477,7 +477,7 @@ msgstr "Och här är några exempel på kompletta bokstäver:"
 #. (itstool) path: sect1/title
 #: tutorial-calligraphy.xml:318
 msgid "Conclusion"
-msgstr "Slutsats"
+msgstr "Sammanfattning"
 
 #. (itstool) path: sect1/para
 #: tutorial-calligraphy.xml:319
