--- a/Inkscape/Tutorials/tutorial-elements.po
+++ b/Inkscape/Tutorials/tutorial-elements.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Inkscape tutorial elements Swedish\n"
 "POT-Creation-Date: 2023-07-14 16:46+0200\n"
-"PO-Revision-Date: 2025-05-13 12:26+0200\n"
+"PO-Revision-Date: 2025-06-30 09:09+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv\n"
@@ -14,7 +14,7 @@ msgstr ""
 #. Put one translator per line, in the form NAME <EMAIL>, YEAR1, YEAR2
 msgctxt "_"
 msgid "translator-credits"
-msgstr "Daniel Nylander"
+msgstr "Daniel Nylander <po@danielnylander.se>, 2025."
 
 #. (itstool) path: articleinfo/title
 #: tutorial-elements.xml:6
@@ -50,7 +50,7 @@ msgstr "Följande element är designens byggstenar."
 #: tutorial-elements.xml:30 elements-f01.svg:132
 #, no-wrap
 msgid "Line"
-msgstr "Rad"
+msgstr "Linje"
 
 #. (itstool) path: sect2/para
 #: tutorial-elements.xml:31
@@ -94,7 +94,7 @@ msgstr "Detta avser variationer i proportionerna mellan föremål, linjer eller 
 #: tutorial-elements.xml:74 elements-f01.svg:158
 #, no-wrap
 msgid "Space"
-msgstr "Rymden"
+msgstr "Utrymme"
 
 #. (itstool) path: sect2/para
 #: tutorial-elements.xml:75
@@ -152,7 +152,7 @@ msgstr ""
 #. (itstool) path: sect1/title
 #: tutorial-elements.xml:133
 msgid "Principles of Design"
-msgstr "Principer för design"
+msgstr "Designprinciper"
 
 #. (itstool) path: sect1/para
 #: tutorial-elements.xml:134
