--- a/Inkscape/Tutorials/tutorial-tracing-pixelart.po
+++ b/Inkscape/Tutorials/tutorial-tracing-pixelart.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Inkscape tutorial tracing pixelart Swedish\n"
 "POT-Creation-Date: 2023-07-14 16:46+0200\n"
-"PO-Revision-Date: 2025-05-13 10:37+0200\n"
+"PO-Revision-Date: 2025-06-30 09:07+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv\n"
 "Language: sv\n"
@@ -14,12 +14,12 @@ msgstr ""
 #. Put one translator per line, in the form NAME <EMAIL>, YEAR1, YEAR2
 msgctxt "_"
 msgid "translator-credits"
-msgstr "Daniel Nylander"
+msgstr "Daniel Nylander <po@danielnylander.se>, 2025."
 
 #. (itstool) path: articleinfo/title
 #: tutorial-tracing-pixelart.xml:6
 msgid "Tracing Pixel Art"
-msgstr "Spårning av pixelkonst"
+msgstr "Kalkering av pixelkonst"
 
 #. (itstool) path: articleinfo/subtitle
 #: tutorial-tracing-pixelart.xml:7
